feat: update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Tzvi-ai/roy-cake.git",
+  "homepage": "https://Tzvi-ai.github.io/roy-cake",
   "name": "roy",
   "private": true,
   "version": "0.0.0",
